<resources>
    <string name="app_name">Pedometer</string>
    <string name="history_data">历史记录</string>
    <string name="exercise_plan">锻炼计划</string>
    <string name="per_stepNumbers">每日锻炼步数</string>
    <string name="save">保存</string>
    <string name="time_remind">提醒时间</string>
    <string name="remind">提醒</string>
    <string name="timeOfRemind">21:00</string>
    <string name="look_data">查看历史步数</string>
    <string name="plan_set">设置锻炼计划</string>DEFAULT_TARGET
    <string name="DEFAULT_TARGET">7000</string>
</resources>
