<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <LinearLayout
        android:id="@+id/layout_title_bar"
        android:layout_width="match_parent"
        android:layout_height="?android:attr/windowTitleSize"
        android:background="@color/colorPrimary"
        android:fitsSystemWindows="true"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/plan_back_out"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:gravity="center"
            android:padding="15dp"
            android:src="@drawable/arrow_back_white"
            android:visibility="visible" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:paddingLeft="@dimen/padding"
            android:paddingRight="@dimen/padding"
            android:text="@string/exercise_plan"
            android:textColor="#ffffff"
            android:textSize="30sp"
            />
    </LinearLayout>
    <ImageView
        android:layout_width="match_parent"
        android:src="@drawable/sport"
        android:scaleType="centerCrop"
        android:layout_height="180dp" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="#ffffff"
        android:gravity="center_vertical"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_gravity="start"
                android:gravity="center_vertical"
                android:layout_weight="2"
                android:text="@string/per_stepNumbers"
                android:textColor="#000000"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/step_target"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="end"
                android:background="#ffffff"
                android:text="@string/DEFAULT_TARGET"
                android:inputType="number"
                android:textColor="#000000"
                android:textSize="20sp" />
        </LinearLayout>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="#999999" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="10dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:layout_gravity="start"
                android:gravity="center_vertical"
                android:text="@string/remind"
                android:textColor="#000000"
                android:textSize="20sp" />

            <CheckBox
                android:id="@+id/cb_remind"
                android:layout_width="75dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:gravity="end"
                android:background="@drawable/cb_plan_selector"
                android:button="@null"
                android:checked="true"
                android:textColor="#000000"/>
        </LinearLayout>
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="#999999" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_weight="8"
                android:layout_gravity="start"
                android:gravity="center_vertical"
                android:text="@string/time_remind"
                android:textColor="#000000"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/tv_remind_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_gravity="center_vertical"
                android:gravity="end"
                android:text="@string/timeOfRemind"
                android:textColor="#000000"
                android:textSize="20sp" />
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/btn_save"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:background="@drawable/btn_submit_bg"
        android:text="@string/save"
        android:textColor="#ffffff"
        android:textSize="30sp"
        />

    <WebView
        android:id="@+id/wv"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp">

    </WebView>
</LinearLayout>